# Radio

./: .clang-format  .cmake-format.json  .gitignore  .prettierrc  .qmlformat.ini  CMakeLists.txt  LICENSE  README.md
i18n/: Radio_en_US.ts
src/: CMakeLists.txt  Radio.pro  Radio.rc  clipboard.cpp  clipboard.h  dialogcontroller.cpp  dialogcontroller.h  discord.cpp  discord.h  equalizer.cpp  equalizer.h  favoritesManager.cpp  favoritesManager.h  libVlcLogMessageModel.cpp  libVlcLogMessageModel.h  main.cpp  mpv.cpp  mpveventmanager.cpp  mpveventmanager.h  networkAccessManager.cpp  networkAccessManager.h  networkInformation.cpp  networkInformation.h  networkinformation.cpp  networkinformation.h  nowPlayingImageProvider.cpp  nowPlayingImageProvider.h  player.cpp  player.h  radio.cpp  radio.h  resources.rc  settings.cpp  settings.h  settingsbase.cpp  settingsbase.h  station.cpp  station.h  streamUrlParser.cpp  streamUrlParser.h  (+7 more)
src/assets/: assets.qrc  resources.qrc
src/i18n/: Radio_en_US.ts
src/icons/: icons.qrc
src/js/: js.qrc
src/player/: CMakeLists.txt  mpv.cpp  mpv.h  mpveventmanager.cpp  mpveventmanager.h  mpvnodehelper.cpp  mpvnodehelper.h  player.cpp  player.h  station.cpp  station.h
src/qml/: ApplicationMenuBar.qml  CMakeLists.txt  ControlLayout.qml  Main.qml  Services.qml  StationInformationLayout.qml  Utilities.js  qml.qrc  qmldir  qtquickcontrols2.conf  utilities.js
src/qml/ApplicationStyle/: ApplicationPalette.qml  ApplicationWindow.qml  Button.qml  CMakeLists.txt  CheckBox.qml  ComboBox.qml  Control.qml  Dialog.qml  DialogButtonBox.qml  Frame.qml  ItemDelegate.qml  Label.qml  Menu.qml  MenuBar.qml  MenuBarItem.qml  MenuItem.qml  MenuSeparator.qml  Pane.qml  Popup.qml  ScrollBar.qml  ScrollIndicator.qml  ScrollView.qml  Slider.qml  StyleProperties.qml  TabBar.qml  TabButton.qml  TabView.qml  TextArea.qml  TextField.qml  ToolTip.qml  qmldir
src/qml/MainWindow/: ApplicationFooter.qml  ApplicationLayout.qml  ApplicationMenuBar.qml  BottomLayout.qml  CMakeLists.txt  MainWindow.qml  TopLayout.qml
src/qml/Shared/: AboutDialog.qml  AnimatedLabel.qml  CMakeLists.txt  CopyContextMenu.qml  IconButton.qml  ImportantLabel.qml  MessageDialog.qml  ModalDialog.qml  MuteButton.qml  NowPlayingLabel.qml  OpenLocationDialog.qml  PlayButton.qml  Separator.qml  ShazamNowPlayingButton.qml  StationImage.qml  VolumeSlider.qml
src/qml/SystemTray/: CMakeLists.txt  SystemTrayIcon.qml  SystemTrayMenu.qml
src/qml/components/: CopyStationStreamUrlButton.qml  Divider.qml  DownscalableImage.qml  EqualizerBand.qml  FavoriteStationButton.qml  GenericListView.qml  IconButton.qml  LoadingIndicator.qml  OptionallyIndicatedLoader.qml  StationDelegate.qml  StationImage.qml  VerticalTabBar.qml  components.qrc
src/qml/components/layouts/mainWindow/: TopLayout.qml
src/qml/components/systemTray/: SystemTrayIcon.qml  SystemTrayMenu.qml
src/qml/dialogs/: AboutDialog.qml  DialogMaster.qml  EqualizerDialog.qml  MediaInformationDialog.qml  MessageDialog.qml  MessagesDialog.qml  OpenLocationDialog.qml  PreferencesDialog.qml  qmldir
src/qml/mainWindow/: BottomLayout.qml  CMakeLists.txt  MainWindow.qml  TopLayout.qml
src/qml/servicePages/: Favorites.qml  RadioGarden.qml  RadioNet.qml  ServicePage.qml  ZenoFM.qml
src/qml/systemTray/: CMakeLists.txt  SystemTrayMenu.qml
src/stationModels/: favoriteStationModel.cpp  favoriteStationModel.h  radioGardenServiceStationModel.cpp  radioGardenServiceStationModel.h  radioNetServiceStationModel.cpp  radioNetServiceStationModel.h  serviceStationModel.cpp  serviceStationModel.h  stationModel.cpp  stationModel.h  zenoFmServiceStationModel.cpp  zenoFmServiceStationModel.h
